Fixed Alignments

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -34,7 +34,7 @@ body {
 
 .imgCover {
   text-align: left;
-  margin-top: 10vh;
+  // margin-top: 10vh;
 }
 
 @media (max-width: 768px) {
@@ -77,7 +77,7 @@ header {
 }
 
 main {
-  padding: 10vw;
+  padding: 10vh 10vw;
   //   height: 100%;
   min-height: calc(100vh - 60px);
 
@@ -93,13 +93,16 @@ main {
       }
     }
   }
-  // &#home {
-  // overflow: hidden;
-
-  // h1 {
-  //   margin-top: 18vh;
-  // }
-  // }
+  &#home {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    // h1 {
+    //   margin-top: 18vh;
+    // }
+  }
 }
 
 .about-info {
